	- For efficiency, return zero immediately if s1 and s2 point to
	  the same string. (DLR)
  nstrcasestr(), mbstrcasestr(), revstrstr(), revstrcasestr(),
  mbrevstrcasestr()
	- For efficiency, return haystack immediately if
	  needle/rev_start is blank. (DLR)
	- Return char* instead of const char*. (DLR)
	- Simplify and rewrite to use the strncasecmp() equivalents.
	  (DLR)
- files.c:
  do_insertfile()
	- Make sure the mark is always properly positioned after
	  inserting a file with the mark on. (DLR)
  copy_file()
	- Assert that inn and out don't both point to the same file.
	  (DLR)
  username_tab_completion(), cwd_tab_completion(), input_tab()
	- Update copyright notice to account for modifications. (DLR)
  username_tab_completion()
	- Rename variable buflen to buf_len, for consistency. (DLR)
  cwd_tab_completion()
	- Remove unneeded assert. (DLR)
	- Rename variable buflen to buf_len, for consistency. (DLR)
  input_tab()
	- Disable completion of usernames, directories, and filenames
	  if the cursor isn't at the end of the line, as it can lead to
	  odd behavior (e.g. adding a copy of the entire match to the
	  middle of the line instead of just the uncompleted part of the
	  match). (DLR)
- nano.c:
  version()
	- Display copyright notices. (DLR)
  copy_from_file()
	- Fix potential segfault after uncutting one line of text with
	  the mark on by properly preserving the beginning of the mark.
	  (DLR, found by Paul Goins)
	- Make sure the mark is always properly positioned after
	  uncutting text with the mark on. (DLR)
- prompt.c:
  do_yesno_prompt()
	- Remove redundant check for NO_HELP's being FALSE. (DLR)
- search.c:
  do_replace_loop()
	- Fix problem where replacing e.g. single-byte characters with
	  multibyte ones could result in openfile->totsize's being
	  miscalculated. (DLR)
- utils.c:
  ngetline(), ngetdelim()
	- Update copyright notice to account for modifications. (DLR)
  ngetdelim()
	- Simplify. (DLR)
- winio.c:
  get_key_buffer()